--- a/_pages/map.html
+++ b/_pages/map.html
@@ -73,7 +73,7 @@ author_profile: true
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([24.9783, 121.5395], 13); // Centered at Eiffel Tower
+    const map = L.map('map').setView([24.9783, 121.5395], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
